Fixed print page layout issues

--- a/HTML rewrite/css/table.css
+++ b/HTML rewrite/css/table.css
@@ -68,9 +68,14 @@ table.teamSchedule {
 }
 
 .oneSchedule {
-    width: 3.1666666in;/* (11 - 6*.25) / 3 */
+    max-width: 3.166667in;/* (11 - 6*.25) / 3 */
     height: 3.75in;/* (8.5 - 4*.25) / 2 */
     overflow: hidden;
+    /* padding-left: 0.25in; */
+    /* padding-right: 0.25in; */
+    margin: 0.25in;
+    margin-bottom: 0;
+    /* margin-top: 0; */
 }
 
 td.col1 {
@@ -102,14 +107,15 @@ td.record_cell.color_red {
 
 @media print {
     @page {
-        size: letter landscape;
+        size: 11in 8.5in;
         margin: 0in;
     }
 }
 
 .printpage {
     max-height: 8in;
-    max-width: 10.5in;
-    padding: 0.25in 0.25in 0 0.25in;
+    max-width: 11in;
+    /* padding: 0.25in 0.25in 0 0.25in; */
     overflow: hidden;
+    margin-bottom: -.2in;
 }
